README.md 및 포팅 메뉴얼 작성

--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -313,3 +313,81 @@ spring.datasource.password=비밀번호
     ```bash
     $ ./openvidu start
     ```
+
+
+
+
+
+## 🟡 주요 기능 사진
+
+1. **일대일 화상회의**
+
+- 카메라 ON / OFF, 마이크 ON / OFF, 실시간 채팅 기능을 제공합니다. 
+- 화상회의 화면 클릭을 통해 상대방과 나의 화면을 전환할 수 있습니다.
+- 나가기 버튼을 통해 화상회의를 종료할 수 있습니다.
+- 채팅을 통해 상대방과 메세지를 주고받을 수 있으며, 채팅 메세지에서는 상대방의 프로필 이미지를 확인할 수 있습니다.
+- 내가 아직 읽지 않은 상대방의 메세지가 존재할 시, 파란색 동그라미 내 숫자를 통해 알 수 있습니다.
+
+
+
+![image-20211119073258724](포팅 매뉴얼.assets/image-20211119073258724.png)
+
+2. **로그인**
+
+- 아이디와 비밀번호를 입력하여 사용자 인증을 받고 로그인할 수 있습니다. 
+- 아이디와 비밀번호 중 가입 시 입력한 내용과 일치하지 않는 값이 존재할 경우 하단에 경고창이 출력됩니다.
+- 이메일은 반드시 '@'을 포함한 이메일 형식을 지켜야 합니다.
+
+![image-20211119073459471](포팅 매뉴얼.assets/image-20211119073459471.png)
+
+3. **회원가입**
+
+- 이메일은 입력과 동시에 서버 통신을 통해 중복검사를 수행하며 하단에 중복 여부를 확인할 수 있습니다.
+- 닉네임 역시 이메일과 마찬가지로 중복 여부를 입력 즉시 수행합니다.
+- 비밀번호는 10 ~ 15자 사이의 값을 입력합니다.
+- 생년월일은 GUI 캘린더를 통해 쉽게 입력할 수 있습니다. 
+- '남', '여' 중 하나의 성별을 SELECT 옵션을 통해 선택할 수 있습니다.
+- 주소 검색 API를 활용하여 지번주소와 도로명 주소를 통해 쉽고 빠르게 주소를 입력할 수 있습니다.
+- 대표 프로필 이미지, 프로필 이미지를 첨부할 수 있으며 이미지의 경우 첨부하면 하단의 미리보기 화면을 통해 이미지를 확인할 수 있습니다.
+- 대표 프로필의 경우 용량은 2MB를 넘지 않아야 합니다. 
+- 프로필 이미지의 경우 최대 7장까지 선택할 수 있으며, 역시 개별 용량은 2MB를 넘지 않아야 합니다.
+
+![image-20211119073622953](포팅 매뉴얼.assets/image-20211119073622953.png)
+
+4. **커뮤니티 게시판**
+
+- 사용자들이 작성한 게시글을 확인할 수 있습니다. 
+- 우측 상단의 ... 버튼을 통해 내가 작성한 게시글인 경우 수정하기 버튼이 활성화되며, 신고하기 버튼을 통해 게시글을 신고할 수 있습니다.
+- 게시글 상단의 프로필 이미지를 클릭하여 상대방의 프로필 페이지로 이동할 수 있습니다.
+- 하트 버튼을 눌러 게시글에 좋아요 기능을 선택할 수 있습니다.
+- 페이지 내 이미지는 1장에서 5장까지 출력되며, 1장인 경우 v-card를 통해, 2장 이상인 경우 carousel을 통해 출력됩니다.
+- 댓글 더보기를 클릭하여 게시글에 작성된 모든 댓글을 확인할 수 있습니다.
+- 댓글 달기에 내용을 입력하고, 작성 버튼을 눌러 해당 게시글에 댓글을 작성할 수 있습니다.
+- 게시글 내용을 눌러 상세 페이지로 이동할 수 있습니다.
+- 우측 상단의 '+' 버튼을 눌러 새로운 게시글을 작성할 수 있습니다.
+
+![image-20211119073757622](포팅 매뉴얼.assets/image-20211119073757622.png)
+
+5. **게시글 신고**
+
+- 이용자는 하나의 게시글을 몇 가지 종류의 사유로 신고할 수 있습니다.
+
+![image-20211119073824656](포팅 매뉴얼.assets/image-20211119073824656.png)
+
+6.  프로필 화면 & 유저 신고
+
+- 사용자는 프로필 페이지를 통해 상대방의 인적사항을 확인할 수 있습니다.
+- 이름과 이메일을 확인할 수 있으며, 상대방의 대표 프로필 이미지를 확인할 수 있습니다. 
+- 팔로우 버튼을 통해 상대방을 팔로우할 수 있습니다. 
+- 우측 상단의 사이렌 버튼을 눌러, 이용자를 신고할 수 있습니다. 
+- 상대방의 팔로워, 팔로잉 수를 확인할 수 있습니다.
+- 상대방이 가입할 때 입력한 관심사를 확인할 수 있습니다. 
+- 하단의 게시물 탭을 통해 상대방이 등록한 이미지를 확인할 수 있습니다.
+
+![image-20211119073922629](포팅 매뉴얼.assets/image-20211119073922629.png)
+
+![image-20211119074008346](포팅 매뉴얼.assets/image-20211119074008346.png)
+
+7. 메인 페이지
+
+![image-20211119073700358](포팅 매뉴얼.assets/image-20211119073700358.png)
